# XAI-Solana-Program

./: Anchor.toml  README.md
programs/xai-solana-program/: Cargo.toml
programs/xai-solana-program/src/: error.rs  lib.rs
programs/xai-solana-program/src/common/: mod.rs  sol.rs  spl_token.rs
programs/xai-solana-program/src/fee/: fee.rs  mod.rs  recommender_claim.rs
programs/xai-solana-program/src/instructions/: initialize.rs  mod.rs  withdraw.rs
programs/xai-solana-program/src/new_token/: mod.rs  new_token.rs
programs/xai-solana-program/src/swap/: instruction.rs
tests/: xai-solana-program.ts
